Centralize plugin versions in main POM
The versions of all used plugins are specified in the `log4j` parent POM
or other parent POMs (`log4j-bom`, `log4j-samples`,
`log4j-spring-cloud-config` or `log4j-spring-cloud-config-samples`).

The script `src/tools/explicit-version.xslt` can be used to check for
explicitly provided version.

--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -36,6 +36,7 @@
     <maven.doap.skip>true</maven.doap.skip>
     <maven.site.skip>true</maven.site.skip>
     <maven.site.deploy.skip>true</maven.site.deploy.skip>
+    <maven-doap-plugin.version>1.2</maven-doap-plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -307,14 +308,6 @@
       <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>com.github.spotbugs</groupId>
-        <artifactId>spotbugs-maven-plugin</artifactId>
-        <version>4.0.4</version>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
       </plugin>
     </plugins>
   </build>
