Centralize plugin versions in main POM
The versions of all used plugins are specified in the `log4j` parent POM
or other parent POMs (`log4j-bom`, `log4j-samples`,
`log4j-spring-cloud-config` or `log4j-spring-cloud-config-samples`).

The script `src/tools/explicit-version.xslt` can be used to check for
explicitly provided version.

--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -215,16 +215,8 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-doap-plugin</artifactId>
-        <version>1.2</version>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>3.11.0</version>
+        <!-- version inherited from ASF Parent -->
         <configuration>
           <skip>true</skip>
           <skipDeploy>true</skipDeploy>
