--- a/pom.xml
+++ b/pom.xml
@@ -160,7 +160,7 @@
       <name>Piotr P. Karwasz</name>
       <email>pkarwasz@apache.org</email>
       <roles>
-	<role>PMC Member</role>
+        <role>PMC Member</role>
       </roles>
       <timezone>Europe/Warsaw</timezone>
     </developer>
@@ -235,6 +235,56 @@
     <Log4jReleaseManager>Ralph Goers</Log4jReleaseManager>
     <Log4jReleaseKey>B3D8E1BA</Log4jReleaseKey>
     <Log4jSigningUserName>rgoers@apache.org</Log4jSigningUserName>
+    <revapi.skip>false</revapi.skip>
+    <manifestfile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestfile>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.doap.skip>false</maven.doap.skip>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- See https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
+    <!-- 1641056400 = Jan 1 2022, instead of 1969, which shows up in Javadoc -->
+    <project.build.outputTimestamp>1663368682</project.build.outputTimestamp>
+    <docLabel>Site Documentation</docLabel>
+    <projectDir/>
+    <module.name/>
+    <argLine>-Xms256m -Xmx1024m</argLine>
+    <javaTargetVersion>1.8</javaTargetVersion>
+
+    <!-- Plugin versions -->
+    <!-- Properties in the format `<artifactId>.version` -->
+    <!-- Spring Boot uses the same convention. -->
+    <asciidoctor-maven-plugin.version>2.2.2</asciidoctor-maven-plugin.version>
+    <build-helper-maven-plugin.version>3.3.0</build-helper-maven-plugin.version>
+    <!-- checkstyle 10.0 requires Java 11 -->
+    <checkstyle.version>8.45.1</checkstyle.version>
+    <checksum-maven-plugin.version>1.11</checksum-maven-plugin.version>
+    <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
+    <docker-maven-plugin.version>0.40.2</docker-maven-plugin.version>
+    <exam-maven-plugin.version>4.13.5</exam-maven-plugin.version>
+    <findsecbugs-plugin.version>1.12.0</findsecbugs-plugin.version>
+    <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
+    <maven-bundle-plugin.version>5.1.8</maven-bundle-plugin.version>
+    <maven-changes-plugin.version>2.12.1</maven-changes-plugin.version>
+    <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
+    <maven-dependency-plugin.version>3.3.0</maven-dependency-plugin.version>
+    <maven-doap-plugin.version>1.2</maven-doap-plugin.version>
+    <maven-jxr-plugin.version>3.2.0</maven-jxr-plugin.version>
+    <!-- Do not update the pdf plugin version without verifying the new version works by running mvn site -->
+    <maven-pdf-plugin.version>1.2</maven-pdf-plugin.version>
+    <maven-pmd-plugin.version>3.16.0</maven-pmd-plugin.version>
+    <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+    <maven-taglib-plugin.version>2.4</maven-taglib-plugin.version>
+    <maven-toolchains-plugin.version>3.0.0</maven-toolchains-plugin.version>
+    <spotbugs-maven-plugin.version>4.7.0.0</spotbugs-maven-plugin.version>
+    <!-- surefire.plugin.version 2.18 yields http://jira.codehaus.org/browse/SUREFIRE-1121, which is fixed in 2.18.1 -->
+    <!-- surefire.plugin.version 2.19 yields https://issues.apache.org/jira/browse/SUREFIRE-1193. -->
+    <!-- all versions after 2.13 yield https://issues.apache.org/jira/browse/SUREFIRE-720 -->
+    <!-- property used in `apache.org:apache` -->
+    <surefire.version>3.0.0-M6</surefire.version>
+    <!-- Maven site depends on Velocity and the escaping rules are different in newer versions. -->
+    <!-- See https://maven.apache.org/plugins/maven-site-plugin/migrate.html -->
+    <velocity.plugin.version>1.5</velocity.plugin.version>
+
     <!-- note that any properties you want available in velocity templates must not use periods! -->
     <slf4jVersion>1.7.36</slf4jVersion>
     <logbackVersion>1.2.11</logbackVersion>
@@ -252,37 +302,6 @@
     <!-- POM for jackson-dataformat-xml 2.13.1 depends on woodstox-core 6.2.7 -->
     <woodstox.version>6.3.1</woodstox.version>
     <groovy.version>3.0.10</groovy.version>
-    <pmd.plugin.version>3.16.0</pmd.plugin.version>
-    <changes.plugin.version>2.12.1</changes.plugin.version>
-    <!-- surefire.plugin.version 2.18 yields http://jira.codehaus.org/browse/SUREFIRE-1121, which is fixed in 2.18.1 -->
-    <!-- surefire.plugin.version 2.19 yields https://issues.apache.org/jira/browse/SUREFIRE-1193. -->
-    <!-- all versions after 2.13 yield https://issues.apache.org/jira/browse/SUREFIRE-720 -->
-    <!-- property specified in `apache.org:apache` -->
-    <surefire.version>3.0.0-M6</surefire.version>
-    <checkstyle.plugin.version>3.1.2</checkstyle.plugin.version>
-    <!-- checkstyle 10.0 requires Java 11 -->
-    <checkstyle.tool.version>8.45.1</checkstyle.tool.version>
-    <!-- Do not update the pdf plugin version without verifying the new version works by running mvn site -->
-    <pdf.plugin.version>1.2</pdf.plugin.version>
-    <cobertura.plugin.version>2.7</cobertura.plugin.version>
-    <jacoco.plugin.version>0.8.8</jacoco.plugin.version>
-    <jxr.plugin.version>3.2.0</jxr.plugin.version>
-    <revapi.skip>false</revapi.skip>
-    <!-- Maven site depends on Velocity and the escaping rules are different in newer versions. -->
-    <!-- See https://maven.apache.org/plugins/maven-site-plugin/migrate.html -->
-    <velocity.plugin.version>1.5</velocity.plugin.version>
-    <asciidoc.plugin.version>2.2.2</asciidoc.plugin.version>
-    <remote.resources.plugin.version>1.5</remote.resources.plugin.version>
-    <manifestfile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestfile>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.doap.skip>false</maven.doap.skip>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <!-- See https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
-    <!-- 1641056400 = Jan 1 2022, instead of 1969, which shows up in Javadoc -->
-    <project.build.outputTimestamp>1663368682</project.build.outputTimestamp>
-    <docLabel>Site Documentation</docLabel>
-    <projectDir/>
     <commonsLoggingVersion>1.2</commonsLoggingVersion>
     <!-- The OSGi API version MUST always be the MINIMUM version Log4j supports -->
     <osgi.api.version>6.0.0</osgi.api.version>
@@ -304,9 +323,6 @@
     <!-- Jakarta EE 9 artifacts -->
     <jakarta.activation.version>2.0.1</jakarta.activation.version>
     <jakarta.mail.version>2.0.1</jakarta.mail.version>
-    <argLine>-Xms256m -Xmx1024m</argLine>
-    <javaTargetVersion>1.8</javaTargetVersion>
-    <module.name/>
     <!-- Used in `log4j-appserver`, so that it does not override `wiremock`'s deps-->
     <jetty.version>9.4.49.v20220914</jetty.version>
     <netty-all.version>4.1.80.Final</netty-all.version>
@@ -1040,19 +1056,34 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>${build-helper-maven-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>net.nicoulaj.maven.plugins</groupId>
+          <artifactId>checksum-maven-plugin</artifactId>
+          <version>${checksum-maven-plugin.version}</version>
+        </plugin>
+        <plugin>
           <groupId>org.eluder.coveralls</groupId>
           <artifactId>coveralls-maven-plugin</artifactId>
-          <version>4.3.0</version>
+          <version>${coveralls-maven-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>io.fabric8</groupId>
           <artifactId>docker-maven-plugin</artifactId>
-          <version>0.40.2</version>
+          <version>${docker-maven-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.ops4j.pax.exam</groupId>
+          <artifactId>exam-maven-plugin</artifactId>
+          <version>${exam-maven-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>${jacoco.plugin.version}</version>
+          <version>${jacoco-maven-plugin.version}</version>
           <executions>
             <execution>
               <id>prepare-agent</id>
@@ -1070,14 +1101,9 @@
           </executions>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>3.3.0</version>
-        </plugin>
-        <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
-          <version>5.1.8</version>
+          <version>${maven-bundle-plugin.version}</version>
           <inherited>true</inherited>
           <extensions>true</extensions>
           <executions>
@@ -1092,17 +1118,17 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-changes-plugin</artifactId>
-          <version>${changes.plugin.version}</version>
+          <version>${maven-changes-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>${checkstyle.plugin.version}</version>
+          <version>${maven-checkstyle-plugin.version}</version>
           <dependencies>
             <dependency>
               <groupId>com.puppycrawl.tools</groupId>
               <artifactId>checkstyle</artifactId>
-              <version>${checkstyle.tool.version}</version>
+              <version>${checkstyle.version}</version>
             </dependency>
           </dependencies>
         </plugin>
@@ -1128,7 +1154,13 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>${maven-dependency-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-doap-plugin</artifactId>
+          <version>${maven-doap-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -1163,7 +1195,6 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>${javadoc.plugin.version}</version>
           <configuration>
             <bottom>&lt;p align="center"&gt;Copyright &amp;#169; {inceptionYear}-{currentYear} {organizationName}. All Rights Reserved.&lt;br /&gt;
             Apache Logging, Apache Log4j, Log4j, Apache, the Apache feather logo, the Apache Logging project logo,
@@ -1174,27 +1205,27 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jxr-plugin</artifactId>
-          <version>${jxr.plugin.version}</version>
+          <version>${maven-jxr-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-pdf-plugin</artifactId>
+          <version>${maven-pdf-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-pmd-plugin</artifactId>
-          <version>${pmd.plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-release-plugin</artifactId>
-          <version>${release.plugin.version}</version>
+          <version>${maven-pmd-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-scm-plugin</artifactId>
-          <version>${scm.plugin.version}</version>
+          <version>${maven-scm-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>3.2.1</version>
+          <version>${maven-source-plugin.version}</version>
           <executions>
             <execution>
               <id>attach-sources</id>
@@ -1207,15 +1238,25 @@
           </executions>
         </plugin>
         <plugin>
+          <groupId>net.sourceforge.maven-taglib</groupId>
+          <artifactId>maven-taglib-plugin</artifactId>
+          <version>${maven-taglib-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-toolchains-plugin</artifactId>
+          <version>${maven-toolchains-plugin.version}</version>
+        </plugin>
+        <plugin>
           <groupId>com.github.spotbugs</groupId>
           <artifactId>spotbugs-maven-plugin</artifactId>
-          <version>4.7.0.0</version>
+          <version>${spotbugs-maven-plugin.version}</version>
           <configuration>
             <plugins>
               <plugin>
                 <groupId>com.h3xstream.findsecbugs</groupId>
                 <artifactId>findsecbugs-plugin</artifactId>
-                <version>1.12.0</version>
+                <version>${findsecbugs-plugin.version}</version>
               </plugin>
             </plugins>
             <excludeFilterFile>${log4jParentDir}/findbugs-exclude-filter.xml</excludeFilterFile>
@@ -1281,7 +1322,6 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
-        <version>3.3.0</version>
         <executions>
           <execution>
             <id>timestamp-property</id>
@@ -1303,7 +1343,7 @@
           <dependency>
             <groupId>com.puppycrawl.tools</groupId>
             <artifactId>checkstyle</artifactId>
-            <version>${checkstyle.tool.version}</version>
+            <version>${checkstyle.version}</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -1314,7 +1354,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-doap-plugin</artifactId>
-        <version>1.2</version>
         <inherited>false</inherited>
         <dependencies>
           <!-- Fix java.lang.IllegalArgumentException: Invalid version number: Version number may be negative or greater than 255 -->
@@ -1372,7 +1411,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pdf-plugin</artifactId>
-        <version>${pdf.plugin.version}</version>
         <executions>
           <execution>
             <id>pdf</id>
@@ -1386,18 +1424,6 @@
           </execution>
         </executions>
       </plugin>
-      <!-- <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>clean</id>
-            <goals>
-              <goal>clean</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin> -->
       <!-- We need to disable the standard ASF configuration to be able to publish our own notice and license files -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -1415,8 +1441,8 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>3.2.0</version>
         <executions>
           <execution>
             <id>copy-sitecss</id>
@@ -1447,7 +1473,7 @@
           <dependency>
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctor-maven-plugin</artifactId>
-            <version>${asciidoc.plugin.version}</version>
+            <version>${asciidoctor-maven-plugin.version}</version>
           </dependency>
         </dependencies>
         <configuration>
@@ -1535,7 +1561,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
-        <version>${changes.plugin.version}</version>
         <inherited>false</inherited>
         <reportSets>
           <reportSet>
@@ -1659,7 +1684,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-pdf-plugin</artifactId>
-            <version>${pdf.plugin.version}</version>
             <executions>
               <execution>
                 <id>pdf</id>
@@ -1683,7 +1707,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-changes-plugin</artifactId>
-            <version>${changes.plugin.version}</version>
             <configuration>
               <template>announcement.vm</template>
               <templateDirectory>src/changes</templateDirectory>
